# chromeless-win

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.sh  chromeless.entitlements  main.swift
assets/: start.html
src/: app.rs  browser.rs  config.rs  lib.rs  main.rs  snap.rs  toast.rs  win32.rs
tests/: integration_test.rs
tools/: make-icon.swift
